# pokemon_open_api

./: Cargo.toml  buildspec.yml
src/: encounter.rs  encounter_area.rs  lib.rs  main.rs  slot.rs
src/core/: game.rs  item.rs  location.rs  mod.rs  pokemon.rs  util.rs
src/core/gen3/: encounter.rs  mod.rs
src/core/gen4/: encounter.rs
src/gen3/: encounter_area_3.rs  mod.rs
src/gen4/: encounter_area_4.rs  mod.rs
src/resources/text/: dppt_en.txt  hgss_en.txt
