[package]
name = "pokemon_open_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
pkhex_rs = {git = "https://github.com/SteveCookTU/pkhex_rs.git", rev = "ddbda29" }
lazy_static = "1.4.0"
num_enum = "0.5.7"
serde = {version = "1.0.137", features = ['derive']}
serde_json = "1.0.81"
lambda-web = { version = "0.1.9", features=["actix4"] }